# cl-heatmap

./: CMakeLists.txt  Makefile  README.md
examples/safecast/: .gitignore  fetch-data.sh  prepare-data.py  run.sh
examples/tdoa/: data.json  run.sh
kernels/: common.h  heat.cl  tdoa.cl
src/: blank.h  colormaps.c  colormaps.h  colormaps.old.c  coords.c  coords.h  log.h  main.c  precision_bench.c  types.h  utils.c  utils.h
utils/: bgeigie.py  gencolormaps.py
web/: httpd.conf  index.html  index.py  run.sh
